--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
     "html-to-docx": "^1.1.34",
+    "inquirer": "^8.0.0",
     "mammoth": "^1.4.16"
   }
 }
